--- a/style.css
+++ b/style.css
@@ -1,93 +1,75 @@
-body, h1 {
-  margin: 0;
-}
-
-body {
-  font-family: 'Inter', sans-serif;
-}
-
-.header {
-  height: 100vh;
-  background-color: #eee;
-  background-image: url(https://pictures.s3.yandex.net/frontend-developer/free-course/cover.jpg);
-  background-size: cover;
-  background-position: center;
-  text-align: center;
-}
-
-body, h1, h2, h3, h4, p, a {  
-    margin: 0;
-  font-size: 100%; 
-  font-weight: normal; 
-} 
-
-
-.header-title {  
-  font-size: 140px;
-  color: white;
-  text-transform: uppercase;
-  font-weight: 500;
-  margin: auto;
-}
-
-.overlay {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, .5);
-  display:flex;
-}
-
-.card {
-  width: 350px;
-  margin-bottom:60px;
-  margin-right:90px;
-  padding:45px 45px 70px 45px;
-  display: inline-block; 
-  box-shadow: 4px 4px 5px rgba(250, 50, 50, .4);
-
-
-}
-
-.card-title {
-   font-size:  24px;
-   font-weight: 500;
-   margin-bottom:10px;
-}
-
-.card-text {
-   font-size:16px;
-
-}
-
-.card-image {
-  width: 100%;
-  margin-bottom:25px;
-}
-
- * {
-  box-sizing:border-box;
-}
- 
- .content {
-font-size: 0;
-   width: 790px;
-   margin: 100px auto 50px;
-}
-
-.no-right-margin {
-  margin-right: 0;
-}
-
-.footer {
-  margin-right: 0;
-  height:300px;
-  background-color: black;
-  display: flex;
+@font-face {
+    src: url(https://code.s3.yandex.net/web-code/fonts/SuisseIntl-Book.woff);
+    font-family: "Suisse";
+    font-weight: normal;
+  }
   
-}
-
-.footer-author {
-  margin:auto;
-  color: white;
-  font-size:24px
-}
+  @font-face {
+    src: url(https://code.s3.yandex.net/web-code/fonts/SuisseIntl-Bold.woff
+  );
+    font-family: "Suisse";
+    font-weight: bold;
+  }
+  
+  html {
+    height: 100%;
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+  }
+  
+  body {
+    background-color: #323131;
+    color: white;
+    max-width: 540px;
+    height: 100%;
+    margin: 0 auto;
+    font-family: "Suisse";
+    box-sizing: border-box;
+    padding: 36px;
+    max-height: 100vh;
+  }
+  
+  .header {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+  
+  .logo {
+    font-weight: bold;
+    font-size: 24px;
+  }
+  
+  .button {
+    width: 130px;
+    height: 40px;
+    padding-top: 10px;
+    box-sizing: border-box;
+    border: 1px solid white;
+    text-align: center;
+    font-size: 14px;
+    cursor: pointer;
+    transition: opacity 0.2s;
+  }
+  
+  .button:hover {
+    opacity: 0.5;
+  }
+  
+  .image {
+    width: 100%;
+    display: block;
+    margin: 70px auto 60px;
+  }
+  
+  .advice {
+    font-size: 42px;
+    font-weight: bold;
+    line-height: 1.1;
+  }
+  
+  .footer {
+    font-size: 16px;
+    margin-top: 70px;
+  }
+  
